<resources>
    <string name="app_name">Android</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="find_password">找回密码</string>
    <string name="gain_code">获取验码成功</string>
    <string name="phone">请输入您的手机号</string>
    <string name="password">请输入您的密码</string>
    <string name="checked_password">记住密码</string>
    <string name="automatic">自动登录</string>
    <string name="chick_login">点击登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="load">加载中...</string>
    <string name="versionhint">暂未实现此功能,敬请期待下一版本.</string>

    <string name="ed_username">请输入用户名</string>
    <string name="ed_two_password">再次输入密码</string>
    <string name="ed_password">请输入密码</string>
    <string name="code">验证码</string>
    <string name="ed_code">请输入验证码</string>
    <string name="ed_phone">请输入手机号</string>


    <string name="rb_home">干货</string>
    <string name="rb_live">互动</string>
    <string name="rb_center">消息</string>
    <string name="rb_mycenter">我的</string>
    <string name="edit_name">再次点击退出应用</string>
    <string name="comm_reply">回复</string>
    <string name="read_comm">期待您的神回复..</string>
    <string name="login_hind">点击登录,体验更多功能</string>
    <string name="login_register">注册/登录</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>


    <string name="home_movie">电影</string>
    <string name="home_recommend">推荐</string>
    <string name="home_tvLive">直播</string>
    <string name="home_move">更多</string>

    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="item_home">推荐</string>
    <string name="item_more">更多</string>

    <string name="onItemClickListener">点击事件没有初始化~~</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
