<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="log"
            type="www.rxfamilyuser.com.coom.Login.viewmodel.LoginModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/titlebar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bj_list">

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="200px"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_marginTop="30px"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="90px"
                        android:layout_marginTop="20px">

                        <View
                            android:layout_width="16px"
                            android:layout_height="match_parent"
                            android:layout_alignParentLeft="true"
                            android:background="@color/login_view" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110px"
                        android:layout_marginTop="20px"
                        android:orientation="horizontal"
                        android:paddingLeft="60px"
                        android:paddingRight="60px">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:textColor="@color/phone">

                            <AutoCompleteTextView
                                android:id="@+id/edit_phone_login"
                                style="@style/autoTextView"
                                android:inputType="phone" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110px"
                        android:layout_marginTop="20px"
                        android:orientation="horizontal"
                        android:paddingLeft="60px"
                        android:paddingRight="60px">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColor="@color/phone">

                            <AutoCompleteTextView
                                android:id="@+id/et_password_login"
                                style="@style/autoTextView"
                                android:inputType="textPassword" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30px"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/check_remember_pwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60px"
                            android:checked="true"
                            android:text="@string/checked_password" />

                        <CheckBox
                            android:id="@+id/check_enable_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="60px"
                            android:checked="true"
                            android:text="@string/automatic" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="120px"
                        android:layout_marginTop="35px"
                        android:gravity="center">

                        <Button
                            android:onClick="btnLoginOrRegister"
                            android:id="@+id/btn_login"
                            android:layout_width="300px"
                            android:layout_height="90px"
                            android:background="@drawable/login_btn_bj_shape"
                            android:stateListAnimator="@animator/login_btn_animator_selector"
                            android:text="@string/chick_login"
                            android:textColor="@color/btn_text" />
                    </RelativeLayout>

                    <TextView
                        android:onClick="btnFindPassword"
                        android:id="@+id/tv_forget_pwd_login"
                        android:layout_width="match_parent"
                        android:layout_height="80px"
                        android:layout_gravity="center"
                        android:layout_marginTop="35px"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@color/forget_password"
                        android:textSize="@dimen/_px26" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35px"
                        android:orientation="horizontal">

                        <ImageView
                            android:onClick="btnQQ"
                            android:id="@+id/image_qq"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40px"
                            android:layout_weight="1"
                            android:src="@mipmap/qq" />

                        <ImageView
                            android:onClick="btnWX"
                            android:id="@+id/image_wx"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@mipmap/weixin_login" />

                        <ImageView
                            android:onClick="btnSia"
                            android:id="@+id/image_xl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="40px"
                            android:layout_weight="1"
                            android:src="@mipmap/sina_login" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:onClick="btnRegister"
                android:id="@+id/fab_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/cv"
                android:layout_alignTop="@id/cv"
                android:layout_marginRight="-20dp"
                android:layout_marginTop="50px"
                android:src="@mipmap/plus"
                android:transitionName="loginFab"
                app:fabSize="normal" />
        </RelativeLayout>

    </LinearLayout>
</layout>